updated css so that the issue in #422 does not take place and the background covers the whole page also added minor css changes as mentioned by @iteles

--- a/src/scss/blocks/_quiz-members.scss
+++ b/src/scss/blocks/_quiz-members.scss
@@ -1,6 +1,7 @@
 .quiz-member {
     margin: 0.5rem 0;
 
+
     .member__details {
         display: inline-block;
         width: 60%
@@ -36,6 +37,9 @@
   margin: 1rem 0;
 }
 
+.quiz-review--header {
+  margin: 0.5rem 0;
+}
 
 .quiz-members-review {
 
